--- a/index.html
+++ b/index.html
@@ -207,7 +207,21 @@
     <div id="bg" class="bg hide_it">
       <div class="nav_bar">
         <div class="back" id="back"> <i class="fa-solid fa-arrow-left"></i> Back to Editor</div>
-        <div class="nav_text"> Preview</div>
+        <div class="themes"> 
+          <button class="green_button c_themes">
+            ......
+          </button>
+          <button class="blue_button c_themes">
+            ......
+          </button>
+          
+          <button class="brown_button c_themes">
+            ......
+          </button>
+          <button class="red_button c_themes">
+            ......
+          </button>
+        </div>
         <button class="download" id="download"> Download <i class="fa-solid fa-download"></i></button>
       </div>
       <div id="resume">
