added media queries

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="box2">
         <div class="align top">
           <div class="heads">Education</div>
-          <div class="heads arrow1"><i class="fa-regular fa-circle-down"></i></div>
+          <div class="heads arrow1"><i class="fa-solid fa-caret-down"></i></div>
         </div>
         <div class="edu1 acc1">
           <form class="school">
@@ -112,7 +112,7 @@
         <div class="line"></div>
         <div class="align">
           <div class="heads">Skills</div>
-          <div class="heads arrow1"><i class="fa-regular fa-circle-down"></i></div>
+          <div class="heads arrow1"><i class="fa-solid fa-caret-down"></i></div>
         </div>
         <div class="acc1">
           <form class="form2" id="s_form">
@@ -132,7 +132,7 @@
         <div class="line"></div>
         <div class="align">
           <div class="heads">Interns</div>
-          <div class="heads arrow1"><i class="fa-regular fa-circle-down"></i></div>
+          <div class="heads arrow1"><i class="fa-solid fa-caret-down"></i></i></div>
         </div>
         <div class="acc1">
           <form class="form2" id="i_form">
@@ -154,7 +154,7 @@
         <div class="line"></div>
         <div class="align">
           <div class="heads">Languages</div>
-          <div class="heads arrow1"><i class="fa-regular fa-circle-down"></i></div>
+          <div class="heads arrow1"><i class="fa-solid fa-caret-down"></i></div>
         </div>
         <div class="acc1">
           <form class="form2" id="l_form">
@@ -175,7 +175,7 @@
         <div class="line"></div>
         <div class="align">
           <div class="heads">Projects</div>
-          <div class="heads arrow1"><i class="fa-regular fa-circle-down"></i></div>
+          <div class="heads arrow1"><i class="fa-solid fa-caret-down"></i></div>
         </div>
         <div class="acc1">
           <form class="form2" id="p_form">
